# jupyter_mcp

./: .gitignore  README.md  pyproject.toml
docs/: ROADMAP.md
src/jupyter_mcp/: __init__.py  condense.py  dag.py  errors.py  kernel.py  model.py  server.py  session.py  summaries.py  tasks.py
tests/: conftest.py  test_condense.py  test_dag.py  test_kernel_resolution.py  test_model.py  test_server.py  test_summaries.py  test_tasks.py
